test/expected/large/import9/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: import9
    foo.com/duversion: 1.0.5-20190910.1568120211560
    foo.com/version: 1.0.5
  labels:
    app.kubernetes.io/name: import9
    helm.sh/chart: import9-1.0.5
  name: import9
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: import9
  type: ClusterIP
